--- a/.github/workflows/code_style.yml
+++ b/.github/workflows/code_style.yml
@@ -20,7 +20,7 @@ jobs:
         run: wget -q -O checkstyle.jar https://github.com/checkstyle/checkstyle/releases/download/checkstyle-10.21.1/checkstyle-10.21.1-all.jar
 
       - name: Run Checkstyle
-        run: java -jar checkstyle.jar -c google_checks.xml sample.java
+        run: java -jar checkstyle.jar -c google_checks.xml **/*.java
 
   pylint:
     runs-on: ubuntu-latest
@@ -40,4 +40,4 @@ jobs:
           pip install pylint
 
       - name: Run Pylint
-        run: pylint **/*.py
+        run: pylint sample.py
